--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,13 @@ Thumbs.db
 
 # python pycache
 /__pycache__/
-/src/__pycache__/
+/src/**/__pycache__/
+
+
 
 # data files
 /data/*/
 
-# dataset file
-# !data/*
 
 # running files
 /.hydra/
@@ -30,6 +30,7 @@ Thumbs.db
 
 # model checkpoint
 /checkpoints/
+/checkpoint_classifier/
 
 # Log files
 *.log
