--- a/configs/general/general_default.yaml
+++ b/configs/general/general_default.yaml
@@ -1,8 +1,8 @@
 # General settings
 name: 'mpnn_denoiser'      # Warning: 'debug' and 'test' are reserved name that have a special behavior
 
-wandb: offline                  # online | offline | disabled
-gpus: 4                        # Multi-gpu is not implemented on this branch
+wandb: disabled                  # online | offline | disabled
+gpus: 1                        # Multi-gpu is not implemented on this branch
 
 resume: null            # If resume, path to ckpt file from outputs directory in main directory
 test_only: null        # Use relative path
