--- a/configs/general/general_default.yaml
+++ b/configs/general/general_default.yaml
@@ -2,10 +2,10 @@
 name: 'mpnn_pilot'      # Warning: 'debug' and 'test' are reserved name that have a special behavior
 
 wandb: online                  # online | offline | disabled
-gpus: 4                        # Multi-gpu is not implemented on this branch
+gpus: 1                        # Multi-gpu is not implemented on this branch
 
 resume: null            # If resume, path to ckpt file from outputs directory in main directory
-test_only: null        # Use relative path
+test_only: checkpoints/mutag/mpnn_pilot/epoch=979.ckpt        # Use relative path
 
 check_val_every_n_epochs: 5
 sample_every_val: 4
