--- a/configs/denoiser/denoiser_default.yaml
+++ b/configs/denoiser/denoiser_default.yaml
@@ -1,12 +1,11 @@
-attr_noise_scale: 0
-adj_noise_scale: 0
+attr_noise_scale: 300
+adj_noise_scale: 300
 
 alpha: 0.01
-pre_n_samples: 1
-n_samples: 1
+pre_n_samples: 10
+n_samples: 100
 
 certify: False
 
-classifier: 'gin'
-classifier_nlayers: 2
+classifier: 'GIN'
 classifier_path: 'checkpoint_classifier/save_model/GIN/GIN_MUTAG_avg_0_2_h64.pt'
