--- a/configs/denoiser/denoiser_default.yaml
+++ b/configs/denoiser/denoiser_default.yaml
@@ -3,9 +3,9 @@ adj_noise_scale: 0
 
 alpha: 0.01
 pre_n_samples: 10
-n_samples: 100
+n_samples: 1000
 
 certify: False
 
-classifier: 'GIN'
-classifier_path: 'checkpoint_classifier/save_model/GIN/GIN_PROTEINS_sum_0_5_h64.pt'
+classifier: 'GraphSAGE'
+classifier_path: 'checkpoint_classifier/save_model/GIN/GIN_IMDB-BINARY_sum_0_5_h64.pt'
