--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,7 +3,7 @@ defaults:
     - general : general_default
     - model : mpnn
     - train : train_default
-    - dataset : mutag
+    - dataset : proteins
     - denoiser : denoiser_default
 
 hydra:
