--- a/configs/general/general_default.yaml
+++ b/configs/general/general_default.yaml
@@ -1,11 +1,11 @@
 # General settings
-name: 'mpnn_pilot'      # Warning: 'debug' and 'test' are reserved name that have a special behavior
+name: 'mpnn'      # Warning: 'debug' and 'test' are reserved name that have a special behavior
 
 wandb: online                  # online | offline | disabled
 gpus: 4                        # Multi-gpu is not implemented on this branch
 
 resume: null            # If resume, path to ckpt file from outputs directory in main directory
-test_only: checkpoints/proteins/mpnn_pilot/last-v1.ckpt       # Use relative path
+test_only: checkpoints/proteins/mpnn/last-v1.ckpt       # Use relative path
 
 check_val_every_n_epochs: 5
 sample_every_val: 4
